--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS Demo</title>
 </head>
 <body>
-    <h1>Hodwy</h1>
+    <h1>Howdy</h1>
     <script src="main.js"></script>
 </body>
 </html>
