--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Demo</title>
+    <title>JS Function Demos</title>
 </head>
 <body>
-    <h1>Howdy</h1>
+    <h1>Howdy - see js file for notes and examples</h1>
     <script src="main.js"></script>
 </body>
 </html>
